# cryptoDigest

./: .gitignore  LICENSE  README.md  app.py  main.py  notifier.py  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
crypto_digest/: main.py
