[tool.poetry]
name = "cryptodigest"
version = "0.1.0"
description = "send cryptocurrency price information to email"
authors = ["tin3ga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.1"
idna = "3.4"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
requests = "2.31.0"
typing-extensions = "4.11.0"
urllib3 = "2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
